[package]
name = "nba_api"
version = "0.1.0"
edition = "2021"
description = "Crate to provide access to various NBA APIs (Stats & Live)"
authors = ["Paras Modi <me@parasmodi.com>"]
repository = "https://github.com/parasm/nba_api"
license = "MIT OR Apache-2.0"
keywords = ["nba", "basketball", "sports"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
ureq = {version = "2.4.0", features = ["json"]}
chrono = "0.4"
